--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ example/.dart_tool/
 example/build/
 media/.dart_tool/
 media/build/
+.dart_tool/
+media/.flutter-plugins-dependencies
+native/temp
+native/target/*
