--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,13 +6,16 @@ version: 1.0.0+1
 environment:
   sdk: ^3.10.0
 
+resolution: workspace
+
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  media: 
-    path: ../media
+  media: 0.0.1+1
   file_picker: ^10.3.7
+  path: ^1.9.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
