--- a/media/pubspec.yaml
+++ b/media/pubspec.yaml
@@ -5,7 +5,9 @@ homepage: https://katim.com
 publish_to: 'https://artifactory.katim.com/artifactory/api/pub/pub-dev-virtual/' 
 
 environment:
-  sdk: ">=3.6.0 <4.0.0"
+  sdk: "^3.10.0"
+
+resolution: workspace
 
 dev_dependencies:
   build_runner: ^2.4.7
@@ -18,22 +20,9 @@ dependencies:
   code_assets: ^1.0.0
   ffi: ^2.1.4
   flutter_rust_bridge: ^2.11.1
+  freezed_annotation:
   logging: ^1.3.0
   path: ^1.9.1
-  path_provider: ^2.1.5
   hooks: ^1.0.0
   native_toolchain_rust: ^1.0.0
 
-ffigen:
-  name: MediaLibrary
-  description: Bindings for media library
-  output: 'lib/src/bindings/media_bindings.dart'
-  headers:
-    entry-points:
-      - '../native/bindings.h'
-    include-directives:
-      - '../native/bindings.h'
-  preamble: |
-    // ignore_for_file: always_specify_types
-    // ignore_for_file: camel_case_types
-    // ignore_for_file: non_constant_identifier_names
