--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -14,8 +14,4 @@ anyhow = "1"
 thiserror = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-image = { version = "0.25", default-features = false, features = ["png"] }
-libc = "0.2.178"
-
-[build-dependencies]
-cbindgen = "0.29.0"
+image = { version = "0.25" }
