--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -1,4 +1,5 @@
-platform :ios, '16.0'
+# Uncomment this line to define a global platform for your project
+# platform :ios, '13.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -38,11 +39,5 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
-    target.build_configurations.each do |config|
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
-      # Exclude x86_64 architecture for iOS simulator on Apple Silicon
-      # This prevents linking issues when only arm64 libraries are available
-      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'x86_64'
-    end
   end
 end
