--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   media:
     path: ../
   file_picker: ^10.3.7
+  image_picker: ^1.2.1
   path: ^1.9.1
   path_provider: ^2.1.5
   media_kit: ^1.2.6
