--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: media_workspace
 description: A media processing library.
+version: 0.0.1
 
 environment:
   sdk: '>=3.10.0 <4.0.0'
@@ -12,3 +13,10 @@ dependencies:
   freezed_annotation: ^2.4.4
   path: ^1.9.1
   http: ^1.2.0
+  code_assets: ^1.0.0
+  logging: ^1.3.0
+  hooks: ^1.0.0
+  native_toolchain_rust: ^1.0.3
+  native_assets_cli: ^0.18.0
+  yaml: ^3.1.3
+  toml: ^0.18.0
