feat: Linux support added

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -59,6 +59,16 @@
             "args": [
                 "macos"
             ]
+        },
+        {
+            "name": "build (linux)",
+            "cwd": "tool",
+            "request": "launch",
+            "type": "dart",
+            "program": "build.dart",
+            "args": [
+                "linux"
+            ]
         }
     ]
 }
