--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,3 +20,7 @@ dependencies:
   native_assets_cli: ^0.18.0
   yaml: ^3.1.3
   toml: ^0.18.0
+
+inno_bundle:
+  id: 64ee1df0-faca-11f0-acd6-db79663d1ab8
+  publisher: kusha
